// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevTools - TimeTravel Snapshot details diff should display highlighted diff 1`] = `
<div
  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-diff"
  class="m_b0c91715"
  data-orientation="horizontal"
  data-testid="jotai-devtools-diff-panel"
  id="jotai-devtools-time-travel-value-tabs-panel-diff"
  role="tabpanel"
>
  <div
    class="internal-jotai-devtools-json-tree-wrapper"
    data-testid="json-tree-view-container"
  >
    <ul
      style="border: 0px; padding: 0.625rem; margin: 0px; list-style: none; background-color: rgba(248, 249, 250, 0.65);"
    >
      <li
        style="padding: 0px; margin: 0px;"
      >
        <ul
          style="padding: 0px; margin: 0px; list-style: none;"
        >
          <li
            style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all;"
          >
            <label
              style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
            >
              <span>
                countAtom
                :
              </span>
            </label>
            <span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; text-decoration: line-through; background-color: rgba(224, 49, 49, 0.65);"
              >
                1
              </span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; color: rgb(144, 146, 150);"
              >
                 =&gt; 
              </span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; background-color: rgba(47, 158, 68, 0.65);"
              >
                2
              </span>
            </span>
          </li>
          <li
            style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all;"
          >
            <label
              style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
            >
              <span>
                doubleCountAtom
                :
              </span>
            </label>
            <span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; text-decoration: line-through; background-color: rgba(224, 49, 49, 0.65);"
              >
                2
              </span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; color: rgb(144, 146, 150);"
              >
                 =&gt; 
              </span>
              <span
                style="position: relative; padding: 2px 3px; border-radius: 3px; background-color: rgba(47, 158, 68, 0.65);"
              >
                4
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot details diff should display highlighted diff when performing "Add" on arrays and objects 1`] = `
<div
  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-diff"
  class="m_b0c91715"
  data-orientation="horizontal"
  data-testid="jotai-devtools-diff-panel"
  id="jotai-devtools-time-travel-value-tabs-panel-diff"
  role="tabpanel"
>
  <div
    class="internal-jotai-devtools-json-tree-wrapper"
    data-testid="json-tree-view-container"
  >
    <ul
      style="border: 0px; padding: 0.625rem; margin: 0px; list-style: none; background-color: rgba(248, 249, 250, 0.65);"
    >
      <li
        style="padding: 0px; margin: 0px;"
      >
        <ul
          style="padding: 0px; margin: 0px; list-style: none;"
        >
          <li
            style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
          >
            <div
              style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
            >
              <div
                style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
              >
                ▶
              </div>
            </div>
            <label
              style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
            >
              <span>
                objectAtom
                :
              </span>
            </label>
            <span
              style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
            >
              { add: {…} }
            </span>
            <ul
              style="padding: 0px; margin: 0px; list-style: none; display: block;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    add
                    :
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                >
                  { arr: {…} }
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                >
                  <li
                    style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
                  >
                    <div
                      style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                    >
                      <div
                        style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                      >
                        ▶
                      </div>
                    </div>
                    <label
                      style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                    >
                      <span>
                        arr
                        :
                      </span>
                    </label>
                    <span
                      style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                    >
                      { 1: 2 }
                    </span>
                    <ul
                      style="padding: 0px; margin: 0px; list-style: none; display: block;"
                    >
                      <li
                        style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 2.125em; text-indent: -0.5em; word-break: break-all;"
                      >
                        <label
                          style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
                        >
                          <span>
                            1
                            :
                          </span>
                        </label>
                        <span>
                          <span
                            style="position: relative; padding: 2px 3px; border-radius: 3px; background-color: rgba(47, 158, 68, 0.65);"
                          >
                            2
                          </span>
                        </span>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot details diff should display highlighted diff when performing "Move" on arrays and objects 1`] = `
<div
  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-diff"
  class="m_b0c91715"
  data-orientation="horizontal"
  data-testid="jotai-devtools-diff-panel"
  id="jotai-devtools-time-travel-value-tabs-panel-diff"
  role="tabpanel"
>
  <div
    class="internal-jotai-devtools-json-tree-wrapper"
    data-testid="json-tree-view-container"
  >
    <ul
      style="border: 0px; padding: 0.625rem; margin: 0px; list-style: none; background-color: rgba(248, 249, 250, 0.65);"
    >
      <li
        style="padding: 0px; margin: 0px;"
      >
        <ul
          style="padding: 0px; margin: 0px; list-style: none;"
        >
          <li
            style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
          >
            <div
              style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
            >
              <div
                style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
              >
                ▶
              </div>
            </div>
            <label
              style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
            >
              <span>
                objectAtom
                :
              </span>
            </label>
            <span
              style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
            >
              { move: {…} }
            </span>
            <ul
              style="padding: 0px; margin: 0px; list-style: none; display: block;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    move
                    :
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                >
                  { arr: {…} }
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                >
                  <li
                    style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
                  >
                    <div
                      style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                    >
                      <div
                        style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                      >
                        ▶
                      </div>
                    </div>
                    <label
                      style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                    >
                      <span>
                        arr
                        :
                      </span>
                    </label>
                    <span
                      style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                    >
                      { 0: 2, 1: 2 }
                    </span>
                    <ul
                      style="padding: 0px; margin: 0px; list-style: none; display: block;"
                    >
                      <li
                        style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 2.125em; text-indent: -0.5em; word-break: break-all;"
                      >
                        <label
                          style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
                        >
                          <span>
                            0
                            :
                          </span>
                        </label>
                        <span>
                          <span
                            style="position: relative; padding: 2px 3px; border-radius: 3px; background-color: rgba(47, 158, 68, 0.65);"
                          >
                            2
                          </span>
                        </span>
                      </li>
                      <li
                        style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 2.125em; text-indent: -0.5em; word-break: break-all;"
                      >
                        <label
                          style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
                        >
                          <span>
                            1
                            :
                          </span>
                        </label>
                        <span>
                          <span
                            style="position: relative; padding: 2px 3px; border-radius: 3px; text-decoration: line-through; background-color: rgba(224, 49, 49, 0.65);"
                          >
                            2
                          </span>
                        </span>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot details diff should display highlighted diff when performing "Remove" on arrays and objects 1`] = `
<div
  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-diff"
  class="m_b0c91715"
  data-orientation="horizontal"
  data-testid="jotai-devtools-diff-panel"
  id="jotai-devtools-time-travel-value-tabs-panel-diff"
  role="tabpanel"
>
  <div
    class="internal-jotai-devtools-json-tree-wrapper"
    data-testid="json-tree-view-container"
  >
    <ul
      style="border: 0px; padding: 0.625rem; margin: 0px; list-style: none; background-color: rgba(248, 249, 250, 0.65);"
    >
      <li
        style="padding: 0px; margin: 0px;"
      >
        <ul
          style="padding: 0px; margin: 0px; list-style: none;"
        >
          <li
            style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
          >
            <div
              style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
            >
              <div
                style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
              >
                ▶
              </div>
            </div>
            <label
              style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
            >
              <span>
                objectAtom
                :
              </span>
            </label>
            <span
              style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
            >
              { remove: {…} }
            </span>
            <ul
              style="padding: 0px; margin: 0px; list-style: none; display: block;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    remove
                    :
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                >
                  { arr: {…} }
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                >
                  <li
                    style="position: relative; padding-top: 0.25em; margin-left: 0.875em; padding-left: 0px;"
                  >
                    <div
                      style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                    >
                      <div
                        style="color: rgb(52, 58, 64); margin-left: 0px; transition: 150ms; transform: rotateZ(90deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; padding-left: 0.2em;"
                      >
                        ▶
                      </div>
                    </div>
                    <label
                      style="display: inline-block; color: rgb(52, 58, 64); margin: 0px; padding: 0px; cursor: pointer;"
                    >
                      <span>
                        arr
                        :
                      </span>
                    </label>
                    <span
                      style="padding-left: 0.5em; cursor: pointer; color: rgb(144, 146, 150); display: none;"
                    >
                      { 1: 2 }
                    </span>
                    <ul
                      style="padding: 0px; margin: 0px; list-style: none; display: block;"
                    >
                      <li
                        style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 2.125em; text-indent: -0.5em; word-break: break-all;"
                      >
                        <label
                          style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
                        >
                          <span>
                            1
                            :
                          </span>
                        </label>
                        <span>
                          <span
                            style="position: relative; padding: 2px 3px; border-radius: 3px; text-decoration: line-through; background-color: rgba(224, 49, 49, 0.65);"
                          >
                            2
                          </span>
                        </span>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot details should display the full state in json tree format when state is selected 1`] = `
<div
  class="internal-jotai-devtools-json-tree-wrapper"
  data-testid="json-tree-view-container"
>
  <ul
    style="border: 0px; padding: 0.625rem; margin: 0px; list-style: none; background-color: rgba(248, 249, 250, 0.65);"
  >
    <li
      style="padding: 0px; margin: 0px;"
    >
      <ul
        style="padding: 0px; margin: 0px; list-style: none;"
      >
        <li
          style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all;"
        >
          <label
            style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
          >
            <span>
              countAtom
              :
            </span>
          </label>
          <span
            style="color: rgb(25, 113, 194);"
          >
            1
          </span>
        </li>
        <li
          style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all;"
        >
          <label
            style="display: inline-block; color: rgb(52, 58, 64); margin: 0px 0.5em 0px 0px;"
          >
            <span>
              doubleCountAtom
              :
            </span>
          </label>
          <span
            style="color: rgb(25, 113, 194);"
          >
            2
          </span>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`DevTools - TimeTravel Snapshot list Search should display an error if no snapshots are found 1`] = `
<div
  class="internal-jotai-devtools-time-travel-wrapper m_8bffd616 __m__-r2c3"
  data-testid="jotai-devtools-time-travel-panel-left-content"
  style="flex-direction: column; padding-top: 0rem; height: 100%;"
>
  <div
    class="internal-jotai-devtools-header-wrapper m_6d731127"
    style="--stack-gap: var(--mantine-spacing-sm); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="internal-jotai-devtools-header-content m_4081bf90"
      style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
    >
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Stop recording snapshot history"
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="outline"
          style="--ai-bg: transparent; --ai-hover: rgba(240, 62, 62, 0.05); --ai-color: var(--mantine-color-red-7); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-red-7);"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-player-record-filled "
              fill="currentColor"
              height="18"
              stroke="none"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 5.072a8 8 0 1 1 -3.995 7.213l-.005 -.285l.005 -.285a8 8 0 0 1 3.995 -6.643z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Clear snapshot history"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Clear snapshot history"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-trash-x "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 7h16"
              />
              <path
                d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
              />
              <path
                d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
              />
              <path
                d="M10 12l4 4m0 -4l-4 4"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Select previous snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Select previous snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-up "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 15l6 -6l6 6"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Select next snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Select next snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-down "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 9l6 6l6 -6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="m_46b77525"
    >
      <div
        class="m_6c018570"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7"
          data-variant="default"
          id="jotai-devtools-search-input"
          placeholder="Search"
          value="a"
        />
      </div>
    </div>
  </div>
  <div
    class=""
    data-testid="jotai-devtools-snapshot-history-list"
    style="overflow: auto; margin-top: 10px;"
  />
  <div
    class="m_4081bf90"
    style="--group-gap: calc(0.375rem * var(--mantine-scale)); --group-align: center; --group-justify: center; --group-wrap: wrap;"
  >
    <svg
      class="tabler-icon tabler-icon-alert-circle "
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M12 16h.01"
      />
    </svg>
    <p
      class="jotai-devtools-focus m_b6d8b162"
      data-testid="jotai-devtools-no-snapshot-found-message"
      style="margin-left: 0rem;"
    >
      No snapshots found!
    </p>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot list Search should search for atoms correctly 1`] = `
<div
  class="internal-jotai-devtools-time-travel-wrapper m_8bffd616 __m__-r22p"
  data-testid="jotai-devtools-time-travel-panel-left-content"
  style="flex-direction: column; padding-top: 0rem; height: 100%;"
>
  <div
    class="internal-jotai-devtools-header-wrapper m_6d731127"
    style="--stack-gap: var(--mantine-spacing-sm); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="internal-jotai-devtools-header-content m_4081bf90"
      style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
    >
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Stop recording snapshot history"
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="outline"
          style="--ai-bg: transparent; --ai-hover: rgba(240, 62, 62, 0.05); --ai-color: var(--mantine-color-red-7); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-red-7);"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-player-record-filled "
              fill="currentColor"
              height="18"
              stroke="none"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 5.072a8 8 0 1 1 -3.995 7.213l-.005 -.285l.005 -.285a8 8 0 0 1 3.995 -6.643z"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Clear snapshot history"
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="default"
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Clear snapshot history"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-trash-x "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 7h16"
              />
              <path
                d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
              />
              <path
                d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
              />
              <path
                d="M10 12l4 4m0 -4l-4 4"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Select previous snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Select previous snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-up "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 15l6 -6l6 6"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Select next snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Select next snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-down "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 9l6 6l6 -6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="m_46b77525"
    >
      <div
        class="m_6c018570"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7"
          data-variant="default"
          id="jotai-devtools-search-input"
          placeholder="Search"
          value="2"
        />
      </div>
    </div>
  </div>
  <div
    class=""
    data-testid="jotai-devtools-snapshot-history-list"
    style="overflow: auto; margin-top: 10px;"
  >
    <button
      class="jotai-devtools-focus internal-jotai-devtools-navlink m_f0824112 m_87cf2631"
      color="dark"
      data-testid="jotai-devtools-snapshot-2"
      data-variant="filled"
      style="--nl-bg: var(--mantine-color-dark-filled); --nl-hover: var(--mantine-color-dark-filled-hover); --nl-color: var(--mantine-color-white);"
      type="button"
    >
      <div
        class="m_f07af9d2"
      >
        <span
          class="m_1f6ac4c4"
        >
          <p
            class="jotai-devtools-focus internal-jotai-devtools-monospace-font m_b6d8b162"
          >
            2
          </p>
        </span>
        <span
          class="m_57492dcc"
        />
      </div>
      <span
        class="m_690090b5"
        data-position="right"
      >
        <svg
          class="tabler-icon tabler-icon-chevron-right "
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6l6 6l-6 6"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot list Snapshot history with actions should render a snapshot list with initial snapshot details on action with recording on 1`] = `
<div
  class="internal-jotai-devtools-shell jotai-devtools-shell m_89d60db1"
  data-orientation="horizontal"
  data-testid="jotai-devtools-shell"
  data-variant="default"
  id="jotai-devtools-shell"
  style="--tabs-radius: var(--mantine-radius-default); --tabs-color: var(--mantine-color-dark-filled); max-height: 90%;"
>
  <div
    class=""
    data-testid="shell-resize-bar"
    style="width: 100%; height: 5px; cursor: row-resize; z-index: 2; position: absolute; top: -2px;"
  />
  <div
    class=""
    style="position: sticky; top: 0px; z-index: 1; width: 100%;"
  >
    <div
      class="m_8bffd616 __m__-r2v1"
      style="align-items: center; justify-content: space-between;"
    >
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <h1
          class="m_8a5d1357"
          data-order="1"
          data-size="h4"
          style="--title-fw: var(--mantine-h4-font-weight); --title-lh: var(--mantine-h4-line-height); --title-fz: var(--mantine-h4-font-size); user-select: none;"
        >
          👻 Jōtai DevTools
        </h1>
        <div
          class="m_347db0ec"
          data-size="xs"
          data-variant="light"
          style="--badge-height: var(--badge-height-xs); --badge-padding-x: var(--badge-padding-x-xs); --badge-fz: var(--badge-fz-xs); --badge-bg: var(--mantine-color-orange-light); --badge-color: var(--mantine-color-orange-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m_5add502a"
          >
            Alpha
          </span>
        </div>
      </div>
      <div
        class="m_8bffd616 __m__-r2vb"
        style="align-items: center;"
      >
        <button
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="filled"
          style="--ai-bg: var(--mantine-color-dark-filled); --ai-hover: var(--mantine-color-dark-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          title="Toggle color scheme"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-moon-stars "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </span>
        </button>
        <button
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="subtle"
          style="--ai-radius: var(--mantine-radius-md); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          title="Minimize panel"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-minus "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12l14 0"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="m_576c9d4 m_89d33d6d"
    data-orientation="horizontal"
    data-variant="default"
    role="tablist"
  >
    <button
      aria-controls="jotai-devtools-shell-panel-atom-viewer"
      aria-selected="false"
      class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
      data-orientation="horizontal"
      data-variant="default"
      id="jotai-devtools-shell-tab-atom-viewer"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="m_fc420b1f"
        data-position="left"
      >
        <svg
          class="tabler-icon tabler-icon-layout-list "
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
          />
          <path
            d="M4 14m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
          />
        </svg>
      </span>
      <span
        class=""
      >
        Atom Viewer
      </span>
    </button>
    <button
      aria-controls="jotai-devtools-shell-panel-time-travel"
      aria-selected="true"
      class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
      data-active="true"
      data-orientation="horizontal"
      data-variant="default"
      id="jotai-devtools-shell-tab-time-travel"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="m_fc420b1f"
        data-position="left"
      >
        <svg
          class="tabler-icon tabler-icon-timeline "
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 16l6 -7l5 5l5 -6"
          />
          <path
            d="M15 14m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M10 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M4 16m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M20 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
        </svg>
      </span>
      <span
        class=""
      >
        <div
          class="m_e5262200"
          data-inline="true"
          data-testid="jotai-devtools-time-travel-recording-indicator"
          style="--indicator-color: var(--mantine-color-red-filled); --indicator-size: calc(0.5rem * var(--mantine-scale)); --indicator-top: 50%; --indicator-right: calc(-0.75rem * var(--mantine-scale)); --indicator-translate-x: 50%; --indicator-translate-y: -50%;"
        >
          <div
            class="m_760d1fb1"
            data-processing="true"
            data-with-border="true"
          />
          Time travel
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="jotai-devtools-shell-tab-atom-viewer"
    class="m_b0c91715"
    data-orientation="horizontal"
    id="jotai-devtools-shell-panel-atom-viewer"
    role="tabpanel"
    style="overflow: hidden; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; height: 100%; display: none;"
  />
  <div
    aria-labelledby="jotai-devtools-shell-tab-time-travel"
    class="m_b0c91715"
    data-orientation="horizontal"
    id="jotai-devtools-shell-panel-time-travel"
    role="tabpanel"
    style="overflow: hidden; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; height: 100%;"
  >
    <div
      class=""
      data-panel-group=""
      data-panel-group-direction="horizontal"
      data-panel-group-id="jotai-devtools-time-travel-panel-group"
      id="jotai-devtools-time-travel-panel-group"
      style="display: flex; flex-direction: row; height: calc(100% - 56px); overflow: hidden; width: 100%;"
    >
      <div
        class=""
        data-panel=""
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-id="jotai-devtools-time-travel-panel-left"
        data-panel-size="45.0"
        id="jotai-devtools-time-travel-panel-left"
        style="flex-basis: 0px; flex-grow: 45; flex-shrink: 1; overflow: auto;"
      >
        <div
          class="internal-jotai-devtools-time-travel-wrapper m_8bffd616 __m__-r325"
          data-testid="jotai-devtools-time-travel-panel-left-content"
          style="flex-direction: column; padding-top: 0rem; height: 100%;"
        >
          <div
            class="internal-jotai-devtools-header-wrapper m_6d731127"
            style="--stack-gap: var(--mantine-spacing-sm); --stack-align: stretch; --stack-justify: flex-start;"
          >
            <div
              class="internal-jotai-devtools-header-content m_4081bf90"
              style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
            >
              <div
                class="m_4081bf90"
                style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
              >
                <button
                  aria-label="Stop recording snapshot history"
                  class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
                  data-variant="outline"
                  style="--ai-bg: transparent; --ai-hover: rgba(240, 62, 62, 0.05); --ai-color: var(--mantine-color-red-7); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-red-7);"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-player-record-filled "
                      fill="currentColor"
                      height="18"
                      stroke="none"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 5.072a8 8 0 1 1 -3.995 7.213l-.005 -.285l.005 -.285a8 8 0 0 1 3.995 -6.643z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Clear snapshot history"
                  class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
                  data-variant="default"
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Clear snapshot history"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-trash-x "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 7h16"
                      />
                      <path
                        d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                      />
                      <path
                        d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                      />
                      <path
                        d="M10 12l4 4m0 -4l-4 4"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="m_4081bf90"
                style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
              >
                <button
                  aria-label="Select previous snapshot"
                  class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
                  data-disabled="true"
                  data-variant="default"
                  disabled=""
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Select previous snapshot"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-chevron-up "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 15l6 -6l6 6"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Select next snapshot"
                  class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
                  data-disabled="true"
                  data-variant="default"
                  disabled=""
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Select next snapshot"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-chevron-down "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 9l6 6l6 -6"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="m_46b77525"
            >
              <div
                class="m_6c018570"
                data-variant="default"
              >
                <input
                  aria-invalid="false"
                  class="m_8fb7ebe7"
                  data-variant="default"
                  id="jotai-devtools-search-input"
                  placeholder="Search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="jotai-devtools-snapshot-history-list"
            style="overflow: auto; margin-top: 10px;"
          >
            <button
              class="jotai-devtools-focus internal-jotai-devtools-navlink m_f0824112 m_87cf2631"
              color="dark"
              data-testid="jotai-devtools-snapshot-1"
              data-variant="filled"
              style="--nl-bg: var(--mantine-color-dark-filled); --nl-hover: var(--mantine-color-dark-filled-hover); --nl-color: var(--mantine-color-white);"
              type="button"
            >
              <div
                class="m_f07af9d2"
              >
                <span
                  class="m_1f6ac4c4"
                >
                  <p
                    class="jotai-devtools-focus internal-jotai-devtools-monospace-font m_b6d8b162"
                  >
                    1
                  </p>
                </span>
                <span
                  class="m_57492dcc"
                />
              </div>
              <span
                class="m_690090b5"
                data-position="right"
              >
                <svg
                  class="tabler-icon tabler-icon-chevron-right "
                  fill="none"
                  height="12"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 6l6 6l-6 6"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-controls="jotai-devtools-time-travel-panel-left"
        aria-valuemax="60"
        aria-valuemin="30"
        aria-valuenow="45"
        class=""
        data-panel-group-direction="horizontal"
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-resize-handle-enabled="true"
        data-panel-resize-handle-id="jotai-devtools-panel-resize-handle"
        data-resize-handle=""
        data-resize-handle-state="inactive"
        id="jotai-devtools-panel-resize-handle"
        role="separator"
        style="user-select: none;"
        tabindex="0"
      >
        <div
          class="internal-jotai-devtools-panel-resize-handle-wrapper"
        >
          <div
            class="internal-jotai-devtools-panel-resize-handle-content"
            style="border-radius: 2rem; vertical-align: middle; height: 20%; min-height: calc(3.125rem * var(--mantine-scale)); max-height: calc(6.25rem * var(--mantine-scale));"
          />
        </div>
      </div>
      <div
        class=""
        data-panel=""
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-id="jotai-devtools-time-travel-panel-right"
        data-panel-size="55.0"
        id="jotai-devtools-time-travel-panel-right"
        style="flex-basis: 0px; flex-grow: 55; flex-shrink: 1; overflow: auto;"
      >
        <div
          class="m_8bffd616 __m__-r33p"
          style="flex-direction: column; padding-left: 0rem; height: 100%; position: relative;"
        >
          <div
            class="m_6d731127"
            style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start; height: auto;"
          >
            <h1
              class="m_8a5d1357"
              data-order="1"
              data-size="h3"
              style="--title-fw: var(--mantine-h3-font-weight); --title-lh: var(--mantine-h3-line-height); --title-fz: var(--mantine-h3-font-size);"
            >
              Snapshot 
            </h1>
            <div
              class=""
            >
              <h1
                class="m_8a5d1357"
                data-order="1"
                data-size="h5"
                style="--title-fw: var(--mantine-h5-font-weight); --title-lh: var(--mantine-h5-line-height); --title-fz: var(--mantine-h5-font-size);"
              >
                Meta
              </h1>
              <div
                class=""
              >
                <p
                  class="jotai-devtools-focus m_b6d8b162"
                  data-testid="meta-info-label-Timestamp"
                  style="font-weight: bold; text-transform: uppercase;"
                >
                  Timestamp
                </p>
                <code
                  class="m_b183c0a2"
                  data-testid="meta-info-value-10:00:00.000 AM"
                  dir="ltr"
                >
                  10:00:00.000 AM
                </code>
              </div>
            </div>
            <div
              class=""
            >
              <h1
                class="m_8a5d1357"
                data-order="1"
                data-size="h5"
                style="--title-fw: var(--mantine-h5-font-weight); --title-lh: var(--mantine-h5-line-height); --title-fz: var(--mantine-h5-font-size);"
              >
                Value
              </h1>
              <div
                class="m_89d60db1"
                data-orientation="horizontal"
                data-variant="default"
                id="jotai-devtools-time-travel-value-tabs"
                style="--tabs-radius: var(--mantine-radius-default); --tabs-color: var(--mantine-color-dark-filled);"
              >
                <div
                  aria-orientation="horizontal"
                  class="m_576c9d4 m_89d33d6d"
                  data-orientation="horizontal"
                  data-variant="default"
                  role="tablist"
                >
                  <button
                    aria-controls="jotai-devtools-time-travel-value-tabs-panel-state"
                    aria-selected="false"
                    class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
                    data-orientation="horizontal"
                    data-variant="default"
                    id="jotai-devtools-time-travel-value-tabs-tab-state"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="m_fc420b1f"
                      data-position="left"
                    >
                      <svg
                        class="tabler-icon tabler-icon-file-code "
                        fill="none"
                        height="0.9rem"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.75"
                        viewBox="0 0 24 24"
                        width="0.9rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 3v4a1 1 0 0 0 1 1h4"
                        />
                        <path
                          d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
                        />
                        <path
                          d="M10 13l-1 2l1 2"
                        />
                        <path
                          d="M14 13l1 2l-1 2"
                        />
                      </svg>
                    </span>
                    <span
                      class=""
                    >
                      State
                    </span>
                  </button>
                  <button
                    aria-controls="jotai-devtools-time-travel-value-tabs-panel-diff"
                    aria-selected="true"
                    class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
                    data-active="true"
                    data-orientation="horizontal"
                    data-variant="default"
                    id="jotai-devtools-time-travel-value-tabs-tab-diff"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="m_fc420b1f"
                      data-position="left"
                    >
                      <svg
                        class="tabler-icon tabler-icon-file-diff "
                        fill="none"
                        height="0.9rem"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.75"
                        viewBox="0 0 24 24"
                        width="0.9rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 3v4a1 1 0 0 0 1 1h4"
                        />
                        <path
                          d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
                        />
                        <path
                          d="M12 10l0 4"
                        />
                        <path
                          d="M10 12l4 0"
                        />
                        <path
                          d="M10 17l4 0"
                        />
                      </svg>
                    </span>
                    <span
                      class=""
                    >
                      Diff
                    </span>
                  </button>
                </div>
                <div
                  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-state"
                  class="m_b0c91715"
                  data-orientation="horizontal"
                  id="jotai-devtools-time-travel-value-tabs-panel-state"
                  role="tabpanel"
                  style="display: none;"
                />
                <div
                  aria-labelledby="jotai-devtools-time-travel-value-tabs-tab-diff"
                  class="m_b0c91715"
                  data-orientation="horizontal"
                  data-testid="jotai-devtools-diff-panel"
                  id="jotai-devtools-time-travel-value-tabs-panel-diff"
                  role="tabpanel"
                >
                  <code
                    class="m_b183c0a2"
                    dir="ltr"
                  >
                    (states are equal)
                  </code>
                </div>
              </div>
            </div>
            <div
              class=""
            >
              <h1
                class="m_8a5d1357"
                data-order="1"
                data-size="h5"
                style="--title-fw: var(--mantine-h5-font-weight); --title-lh: var(--mantine-h5-line-height); --title-fz: var(--mantine-h5-font-size);"
              >
                Actions
              </h1>
              <button
                class="jotai-devtools-focus m_77c9d27d m_87cf2631"
                data-disabled="true"
                data-size="xs"
                data-variant="default"
                data-with-left-section="true"
                disabled=""
                style="--button-height: var(--button-height-xs); --button-padding-x: var(--button-padding-x-xs); --button-fz: var(--mantine-font-size-xs); --button-bg: var(--mantine-color-default); --button-hover: var(--mantine-color-default-hover); --button-color: var(--mantine-color-default-color); --button-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                title="Restore this state"
                type="button"
              >
                <span
                  class="m_80f1301b"
                >
                  <span
                    class="m_a74036a"
                    data-position="left"
                    style="margin-right: 0.325rem; transform: rotate(130deg);"
                  >
                    <svg
                      class="tabler-icon tabler-icon-rotate-2 "
                      fill="none"
                      height="0.8rem"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="0.8rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 4.55a8 8 0 0 0 -6 14.9m0 -4.45v5h-5"
                      />
                      <path
                        d="M18.37 7.16l0 .01"
                      />
                      <path
                        d="M13 19.94l0 .01"
                      />
                      <path
                        d="M16.84 18.37l0 .01"
                      />
                      <path
                        d="M19.37 15.1l0 .01"
                      />
                      <path
                        d="M19.94 11l0 .01"
                      />
                    </svg>
                  </span>
                  <span
                    class="m_811560b9"
                  >
                    Restore
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="internal-jotai-devtools-playbar-wrapper"
    >
      <button
        class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
        data-variant="filled"
        style="--ai-bg: var(--mantine-color-dark-filled); --ai-hover: var(--mantine-color-dark-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        title="Start time travel"
        type="button"
      >
        <span
          class="m_8d3afb97"
        >
          <svg
            class="tabler-icon tabler-icon-player-play-filled "
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z"
            />
          </svg>
        </span>
      </button>
      <div
        class="internal-jotai-devtools-playbar-root m_dd36362e"
        data-size="xs"
        style="--slider-size: var(--slider-size-xs); --slider-radius: var(--mantine-radius-xl); --slider-thumb-size: calc(var(--slider-size) * 2);"
        tabindex="-1"
      >
        <div
          class="m_a8645c2"
        >
          <div
            class="internal-jotai-devtools-playbar-track:before m_c9ade57f"
          >
            <div
              class="internal-jotai-devtools-playbar-bar m_38aeed47"
              style="--slider-bar-width: calc(0% + var(--slider-size)); --slider-bar-offset: calc(0% - var(--slider-size));"
            />
            <div
              aria-label=""
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="jotai-devtools-focus internal-jotai-devtools-playbar-thumb m_c9a9a60a"
              role="slider"
              style="--slider-thumb-offset: 0%;"
              tabindex="0"
            />
            <div />
          </div>
        </div>
        <input
          type="hidden"
          value="0"
        />
      </div>
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Restore previous snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Restore previous snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-left "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 6l-6 6l6 6"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Restore next snapshot"
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="default"
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Restore next snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-right "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 6l6 6l-6 6"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="m_46b77525"
        data-size="xs"
        style="max-width: calc(5rem * var(--mantine-scale));"
      >
        <div
          class="m_6c018570"
          data-pointer="true"
          data-size="xs"
          data-variant="default"
          style="--input-height: var(--input-height-xs); --input-fz: var(--mantine-font-size-xs); --input-right-section-pointer-events: none;"
        >
          <input
            aria-haspopup="listbox"
            aria-invalid="false"
            autocomplete="off"
            class="m_8fb7ebe7"
            data-testid="jotai-devtools-playback-speed-dropdown"
            data-variant="default"
            id="jotai-devtools-playback-speed-dropdown"
            readonly=""
            value="1x"
          />
          <div
            class="m_82577fc2"
            data-position="right"
          >
            <svg
              class="m_2943220b"
              data-combobox-chevron="true"
              data-size="xs"
              fill="none"
              style="--combobox-chevron-size: var(--combobox-chevron-size-xs);"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        type="hidden"
        value="1x"
      />
    </div>
  </div>
</div>
`;

exports[`DevTools - TimeTravel Snapshot list should render time travel without any errors 1`] = `
<div
  class="internal-jotai-devtools-shell jotai-devtools-shell m_89d60db1"
  data-orientation="horizontal"
  data-testid="jotai-devtools-shell"
  data-variant="default"
  id="jotai-devtools-shell"
  style="--tabs-radius: var(--mantine-radius-default); --tabs-color: var(--mantine-color-dark-filled); max-height: 90%;"
>
  <div
    class=""
    data-testid="shell-resize-bar"
    style="width: 100%; height: 5px; cursor: row-resize; z-index: 2; position: absolute; top: -2px;"
  />
  <div
    class=""
    style="position: sticky; top: 0px; z-index: 1; width: 100%;"
  >
    <div
      class="m_8bffd616 __m__-rd"
      style="align-items: center; justify-content: space-between;"
    >
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <h1
          class="m_8a5d1357"
          data-order="1"
          data-size="h4"
          style="--title-fw: var(--mantine-h4-font-weight); --title-lh: var(--mantine-h4-line-height); --title-fz: var(--mantine-h4-font-size); user-select: none;"
        >
          👻 Jōtai DevTools
        </h1>
        <div
          class="m_347db0ec"
          data-size="xs"
          data-variant="light"
          style="--badge-height: var(--badge-height-xs); --badge-padding-x: var(--badge-padding-x-xs); --badge-fz: var(--badge-fz-xs); --badge-bg: var(--mantine-color-orange-light); --badge-color: var(--mantine-color-orange-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        >
          <span
            class="m_5add502a"
          >
            Alpha
          </span>
        </div>
      </div>
      <div
        class="m_8bffd616 __m__-rn"
        style="align-items: center;"
      >
        <button
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="filled"
          style="--ai-bg: var(--mantine-color-dark-filled); --ai-hover: var(--mantine-color-dark-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          title="Toggle color scheme"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-moon-stars "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </span>
        </button>
        <button
          class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
          data-variant="subtle"
          style="--ai-radius: var(--mantine-radius-md); --ai-bg: transparent; --ai-hover: var(--mantine-color-gray-light-hover); --ai-color: var(--mantine-color-gray-light-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
          title="Minimize panel"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-minus "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12l14 0"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="m_576c9d4 m_89d33d6d"
    data-orientation="horizontal"
    data-variant="default"
    role="tablist"
  >
    <button
      aria-controls="jotai-devtools-shell-panel-atom-viewer"
      aria-selected="false"
      class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
      data-orientation="horizontal"
      data-variant="default"
      id="jotai-devtools-shell-tab-atom-viewer"
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="m_fc420b1f"
        data-position="left"
      >
        <svg
          class="tabler-icon tabler-icon-layout-list "
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
          />
          <path
            d="M4 14m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
          />
        </svg>
      </span>
      <span
        class=""
      >
        Atom Viewer
      </span>
    </button>
    <button
      aria-controls="jotai-devtools-shell-panel-time-travel"
      aria-selected="true"
      class="jotai-devtools-focus m_539e827b m_4ec4dce6 m_87cf2631"
      data-active="true"
      data-orientation="horizontal"
      data-variant="default"
      id="jotai-devtools-shell-tab-time-travel"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="m_fc420b1f"
        data-position="left"
      >
        <svg
          class="tabler-icon tabler-icon-timeline "
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 16l6 -7l5 5l5 -6"
          />
          <path
            d="M15 14m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M10 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M4 16m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
          <path
            d="M20 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"
          />
        </svg>
      </span>
      <span
        class=""
      >
        Time travel
      </span>
    </button>
  </div>
  <div
    aria-labelledby="jotai-devtools-shell-tab-atom-viewer"
    class="m_b0c91715"
    data-orientation="horizontal"
    id="jotai-devtools-shell-panel-atom-viewer"
    role="tabpanel"
    style="overflow: hidden; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; height: 100%; display: none;"
  />
  <div
    aria-labelledby="jotai-devtools-shell-tab-time-travel"
    class="m_b0c91715"
    data-orientation="horizontal"
    id="jotai-devtools-shell-panel-time-travel"
    role="tabpanel"
    style="overflow: hidden; border-bottom-left-radius: 7px; border-bottom-right-radius: 7px; height: 100%;"
  >
    <div
      class=""
      data-panel-group=""
      data-panel-group-direction="horizontal"
      data-panel-group-id="jotai-devtools-time-travel-panel-group"
      id="jotai-devtools-time-travel-panel-group"
      style="display: flex; flex-direction: row; height: calc(100% - 56px); overflow: hidden; width: 100%;"
    >
      <div
        class=""
        data-panel=""
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-id="jotai-devtools-time-travel-panel-left"
        data-panel-size="45.0"
        id="jotai-devtools-time-travel-panel-left"
        style="flex-basis: 0px; flex-grow: 45; flex-shrink: 1; overflow: auto;"
      >
        <div
          class="internal-jotai-devtools-time-travel-wrapper m_8bffd616 __m__-r2p"
          data-testid="jotai-devtools-time-travel-panel-left-content"
          style="flex-direction: column; padding-top: 0rem; height: 100%;"
        >
          <div
            class="internal-jotai-devtools-header-wrapper m_6d731127"
            style="--stack-gap: var(--mantine-spacing-sm); --stack-align: stretch; --stack-justify: flex-start;"
          >
            <div
              class="internal-jotai-devtools-header-content m_4081bf90"
              style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: space-between; --group-wrap: wrap;"
            >
              <div
                class="m_4081bf90"
                style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
              >
                <button
                  aria-label="Record snapshot history"
                  class="jotai-devtools-focus jotai-devtools-active m_8d3f4000 m_87cf2631"
                  data-variant="outline"
                  style="--ai-bg: transparent; --ai-hover: var(--mantine-color-dark-outline-hover); --ai-color: var(--mantine-color-dark-outline); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-dark-outline);"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-player-record-filled "
                      fill="currentColor"
                      height="18"
                      stroke="none"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 5.072a8 8 0 1 1 -3.995 7.213l-.005 -.285l.005 -.285a8 8 0 0 1 3.995 -6.643z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Clear snapshot history"
                  class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
                  data-disabled="true"
                  data-variant="default"
                  disabled=""
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Clear snapshot history"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-trash-x "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 7h16"
                      />
                      <path
                        d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
                      />
                      <path
                        d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
                      />
                      <path
                        d="M10 12l4 4m0 -4l-4 4"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="m_4081bf90"
                style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
              >
                <button
                  aria-label="Select previous snapshot"
                  class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
                  data-disabled="true"
                  data-variant="default"
                  disabled=""
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Select previous snapshot"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-chevron-up "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 15l6 -6l6 6"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="Select next snapshot"
                  class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
                  data-disabled="true"
                  data-variant="default"
                  disabled=""
                  style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
                  title="Select next snapshot"
                  type="button"
                >
                  <span
                    class="m_8d3afb97"
                  >
                    <svg
                      class="tabler-icon tabler-icon-chevron-down "
                      fill="none"
                      height="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 9l6 6l6 -6"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="m_46b77525"
            >
              <div
                class="m_6c018570"
                data-variant="default"
              >
                <input
                  aria-invalid="false"
                  class="m_8fb7ebe7"
                  data-variant="default"
                  id="jotai-devtools-search-input"
                  placeholder="Search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="jotai-devtools-snapshot-history-list"
            style="overflow: auto; margin-top: 10px;"
          />
        </div>
      </div>
      <div
        aria-controls="jotai-devtools-time-travel-panel-left"
        aria-valuemax="60"
        aria-valuemin="30"
        aria-valuenow="45"
        class=""
        data-panel-group-direction="horizontal"
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-resize-handle-enabled="true"
        data-panel-resize-handle-id="jotai-devtools-panel-resize-handle"
        data-resize-handle=""
        data-resize-handle-state="inactive"
        id="jotai-devtools-panel-resize-handle"
        role="separator"
        style="user-select: none;"
        tabindex="0"
      >
        <div
          class="internal-jotai-devtools-panel-resize-handle-wrapper"
        >
          <div
            class="internal-jotai-devtools-panel-resize-handle-content"
            style="border-radius: 2rem; vertical-align: middle; height: 20%; min-height: calc(3.125rem * var(--mantine-scale)); max-height: calc(6.25rem * var(--mantine-scale));"
          />
        </div>
      </div>
      <div
        class=""
        data-panel=""
        data-panel-group-id="jotai-devtools-time-travel-panel-group"
        data-panel-id="jotai-devtools-time-travel-panel-right"
        data-panel-size="55.0"
        id="jotai-devtools-time-travel-panel-right"
        style="flex-basis: 0px; flex-grow: 55; flex-shrink: 1; overflow: auto;"
      >
        <div
          class="m_8bffd616 __m__-r4d"
          style="flex-direction: column; padding-left: 0rem; height: 100%; position: relative;"
        >
          <div
            class=""
            style="position: relative; top: 50%; transform: translateY(-50%);"
          >
            <p
              class="jotai-devtools-focus m_b6d8b162"
              style="text-align: center; width: 100%;"
            >
              Select a snapshot from the left panel to view the details
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="internal-jotai-devtools-playbar-wrapper"
    >
      <button
        class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
        data-disabled="true"
        data-variant="filled"
        disabled=""
        style="--ai-bg: var(--mantine-color-dark-filled); --ai-hover: var(--mantine-color-dark-filled-hover); --ai-color: var(--mantine-color-white); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
        title="Start time travel"
        type="button"
      >
        <span
          class="m_8d3afb97"
        >
          <svg
            class="tabler-icon tabler-icon-player-play-filled "
            fill="currentColor"
            height="16"
            stroke="none"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z"
            />
          </svg>
        </span>
      </button>
      <div
        class="internal-jotai-devtools-playbar-root m_dd36362e"
        data-size="xs"
        style="--slider-size: var(--slider-size-xs); --slider-radius: var(--mantine-radius-xl); --slider-thumb-size: calc(var(--slider-size) * 2);"
        tabindex="-1"
      >
        <div
          class="m_a8645c2"
          data-disabled="true"
        >
          <div
            class="internal-jotai-devtools-playbar-track:before m_c9ade57f"
            data-disabled="true"
          >
            <div
              class="internal-jotai-devtools-playbar-bar m_38aeed47"
              data-disabled="true"
              style="--slider-bar-width: calc(NaN% + var(--slider-size)); --slider-bar-offset: calc(0% - var(--slider-size));"
            />
            <div
              aria-label=""
              aria-valuemax="0"
              aria-valuemin="0"
              aria-valuenow="0"
              class="jotai-devtools-focus internal-jotai-devtools-playbar-thumb m_c9a9a60a"
              data-disabled="true"
              role="slider"
              style="--slider-thumb-offset: NaN%;"
              tabindex="0"
            />
            <div />
          </div>
        </div>
        <input
          type="hidden"
          value="0"
        />
      </div>
      <div
        class="m_4081bf90"
        style="--group-gap: var(--mantine-spacing-md); --group-align: center; --group-justify: flex-start; --group-wrap: wrap;"
      >
        <button
          aria-label="Restore previous snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Restore previous snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-left "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 6l-6 6l6 6"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Restore next snapshot"
          class="jotai-devtools-focus m_8d3f4000 m_87cf2631"
          data-disabled="true"
          data-variant="default"
          disabled=""
          style="--ai-bg: var(--mantine-color-default); --ai-hover: var(--mantine-color-default-hover); --ai-color: var(--mantine-color-default-color); --ai-bd: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);"
          title="Restore next snapshot"
          type="button"
        >
          <span
            class="m_8d3afb97"
          >
            <svg
              class="tabler-icon tabler-icon-chevron-right "
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 6l6 6l-6 6"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="m_46b77525"
        data-size="xs"
        style="max-width: calc(5rem * var(--mantine-scale));"
      >
        <div
          class="m_6c018570"
          data-pointer="true"
          data-size="xs"
          data-variant="default"
          style="--input-height: var(--input-height-xs); --input-fz: var(--mantine-font-size-xs); --input-right-section-pointer-events: none;"
        >
          <input
            aria-haspopup="listbox"
            aria-invalid="false"
            autocomplete="off"
            class="m_8fb7ebe7"
            data-testid="jotai-devtools-playback-speed-dropdown"
            data-variant="default"
            id="jotai-devtools-playback-speed-dropdown"
            readonly=""
            value="1x"
          />
          <div
            class="m_82577fc2"
            data-position="right"
          >
            <svg
              class="m_2943220b"
              data-combobox-chevron="true"
              data-size="xs"
              fill="none"
              style="--combobox-chevron-size: var(--combobox-chevron-size-xs);"
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        type="hidden"
        value="1x"
      />
    </div>
  </div>
</div>
`;
